# Qt-Desktop-Template

./: .travis.yml  CMakeLists.txt  README.rst
.github/workflows/: appimage.yml  flatpak.yml  macos.yml  snap.yml  tests.yml  windows.yml
cmake/: BuildType.cmake  CompilerConfig.cmake  QtConfig.cmake  appinfo.h.in  config.h.in  installer.iss.in
cmake/Modules/: README.rst
flatpak/: io.github.stemoretti.QtDesktopTemplate.yml
include/: CMakeLists.txt  config.h.in
package/: CMakeLists.txt  Info.plist.in  installer.iss.in  qt-desktop-template.iss.in
packaging/linux/: CMakeLists.txt
packaging/linux/flatpak/: io.github.stemoretti.QtDesktopTemplate.yml
packaging/linux/snap/: snapcraft.yaml
packaging/macos/: Info.plist.in
packaging/windows/: installer.iss.in
res/: CMakeLists.txt
resources/: CMakeLists.txt  Icon.icns  qt-desktop-template.desktop  qt-desktop-template.rc
snap/: snapcraft.yaml
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
tests/: CMakeLists.txt  test_main.cpp  test_suite.cpp  test_suite.h
translations/: CMakeLists.txt  qt-desktop-template_it.ts
